test/tests/stages/15_arrays_and_pointer_arithmetic/valid/libraries/return_pointer_to_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  long
  (
  *
  identifier(return_row)
  (
  long
  (
  *
  identifier(arr)
  )
  [
  const int(3)
  ]
  [
  const int(4)
  ]
  ,
  int
  identifier(idx)
  )
  )
  [
  const int(4)
  ]
  {
  return
  identifier(arr)
  [
  identifier(idx)
  ]
  ;
  }
