test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/cast_to_array_type_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  long
  identifier(arr)
  [
  const int(10)
  ]
  ;
  return
  (
  int
  *
  [
  const int(10)
  ]
  )
  identifier(arr)
  ;
  }
